MiParser.java
/* MiParser.java */
/* Generated By:JavaCC: Do not edit this line. MiParser.java */
public class MiParser implements MiParserConstants {
    public static void main(String[] args) {
        try {
            MiParser parser = new MiParser(new java.io.FileReader(args[0]));
            parser.programa();
            System.out.println("Parseo Exitoso");
        } catch (Exception e) {
            System.err.println("Parseo Fallido: " + e.getMessage());
            e.printStackTrace();
        }
    }

  final public void programa() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      sentencia();
    }
    jj_consume_token(0);
}

  final public void sentencia() throws ParseException {
    if (jj_2_2(3)) {
      imprimirSentencia();
    } else if (jj_2_3(3)) {
      importarLibreria();
    } else if (jj_2_4(3)) {
      declararVariable();
    } else if (jj_2_5(3)) {
      declararCadena();
    } else if (jj_2_6(3)) {
      ifStatement();
    } else if (jj_2_7(3)) {
      forLoop();
    } else if (jj_2_8(3)) {
      whileLoop();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void imprimirSentencia() throws ParseException {
    jj_consume_token(IMPRIMIR);
    identificadorOCadena();
    jj_consume_token(PUNTOYCOMA);
}

  final public void importarLibreria() throws ParseException {
    jj_consume_token(IMPORTAR);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PUNTOYCOMA);
}

  final public void declararVariable() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACION);
    expresion();
    jj_consume_token(PUNTOYCOMA);
}

  final public void declararCadena() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACION);
    jj_consume_token(CADENA);
    jj_consume_token(PUNTOYCOMA);
}

  final public void ifStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(PIZQUIERDO);
    condicion();
    jj_consume_token(PDERECHO);
    jj_consume_token(LLAVEIZQ);
    label_2:
    while (true) {
      if (jj_2_9(3)) {
        ;
      } else {
        break label_2;
      }
      sentencia();
    }
    jj_consume_token(LLAVEDER);
    if (jj_2_11(3)) {
      jj_consume_token(ELSE);
      jj_consume_token(LLAVEIZQ);
      label_3:
      while (true) {
        if (jj_2_10(3)) {
          ;
        } else {
          break label_3;
        }
        sentencia();
      }
      jj_consume_token(LLAVEDER);
    } else {
      ;
    }
}

  final public void forLoop() throws ParseException {
    if (jj_2_16(3)) {
      jj_consume_token(FOR);
      jj_consume_token(PIZQUIERDO);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(IN);
      jj_consume_token(RANGE);
      jj_consume_token(PIZQUIERDO);
      expresion();
      if (jj_2_13(3)) {
        jj_consume_token(COMA);
        expresion();
        if (jj_2_12(3)) {
          jj_consume_token(COMA);
          expresion();
        } else {
          ;
        }
      } else {
        ;
      }
      jj_consume_token(PDERECHO);
      jj_consume_token(PDERECHO);
      jj_consume_token(LLAVEIZQ);
      label_4:
      while (true) {
        if (jj_2_14(3)) {
          ;
        } else {
          break label_4;
        }
        sentencia();
      }
      jj_consume_token(LLAVEDER);
    } else if (jj_2_17(3)) {
      jj_consume_token(FOR);
      jj_consume_token(PIZQUIERDO);
      declararVariable();
      condicion();
      jj_consume_token(PUNTOYCOMA);
      expresion();
      jj_consume_token(PDERECHO);
      jj_consume_token(LLAVEIZQ);
      label_5:
      while (true) {
        if (jj_2_15(3)) {
          ;
        } else {
          break label_5;
        }
        sentencia();
      }
      jj_consume_token(LLAVEDER);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void whileLoop() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(PIZQUIERDO);
    condicion();
    jj_consume_token(PDERECHO);
    jj_consume_token(LLAVEIZQ);
    label_6:
    while (true) {
      if (jj_2_18(3)) {
        ;
      } else {
        break label_6;
      }
      sentencia();
    }
    jj_consume_token(LLAVEDER);
}

  final public void condicion() throws ParseException {
    expresion();
    if (jj_2_19(3)) {
      jj_consume_token(MENORQUE);
    } else if (jj_2_20(3)) {
      jj_consume_token(MAYORQUE);
    } else if (jj_2_21(3)) {
      jj_consume_token(MENORIGUAL);
    } else if (jj_2_22(3)) {
      jj_consume_token(MAYORIGUAL);
    } else if (jj_2_23(3)) {
      jj_consume_token(IGUALQUE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    expresion();
}

  final public void expresion() throws ParseException {
    termino();
    label_7:
    while (true) {
      if (jj_2_24(3)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_25(3)) {
        jj_consume_token(SUMA);
      } else if (jj_2_26(3)) {
        jj_consume_token(RESTA);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      termino();
    }
}

  final public void termino() throws ParseException {
    factor();
    label_8:
    while (true) {
      if (jj_2_27(3)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_28(3)) {
        jj_consume_token(MULTIPLICACION);
      } else if (jj_2_29(3)) {
        jj_consume_token(DIVISION);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      factor();
    }
}

  final public void factor() throws ParseException {
    if (jj_2_30(3)) {
      jj_consume_token(NUMERO);
    } else if (jj_2_31(3)) {
      jj_consume_token(IDENTIFICADOR);
    } else if (jj_2_32(3)) {
      jj_consume_token(CADENA);
    } else if (jj_2_33(3)) {
      jj_consume_token(PIZQUIERDO);
      expresion();
      jj_consume_token(PDERECHO);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void identificadorOCadena() throws ParseException {
    if (jj_2_34(3)) {
      jj_consume_token(IDENTIFICADOR);
    } else if (jj_2_35(3)) {
      jj_consume_token(CADENA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_3R_declararCadena_89_5_13()
 {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(ASIGNACION)) return true;
    if (jj_scan_token(CADENA)) return true;
    return false;
  }

  private boolean jj_3_35()
 {
    if (jj_scan_token(CADENA)) return true;
    return false;
  }

  private boolean jj_3R_declararVariable_85_5_12()
 {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(ASIGNACION)) return true;
    if (jj_3R_expresion_144_5_17()) return true;
    return false;
  }

  private boolean jj_3_29()
 {
    if (jj_scan_token(DIVISION)) return true;
    return false;
  }

  private boolean jj_3R_importarLibreria_81_5_11()
 {
    if (jj_scan_token(IMPORTAR)) return true;
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(PUNTOYCOMA)) return true;
    return false;
  }

  private boolean jj_3R_imprimirSentencia_77_5_10()
 {
    if (jj_scan_token(IMPRIMIR)) return true;
    if (jj_3R_identificadorOCadena_165_5_20()) return true;
    if (jj_scan_token(PUNTOYCOMA)) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_3R_whileLoop_125_5_16()) return true;
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_3R_forLoop_105_5_15()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_3R_ifStatement_93_5_14()) return true;
    return false;
  }

  private boolean jj_3R_identificadorOCadena_165_5_20()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_declararCadena_89_5_13()) return true;
    return false;
  }

  private boolean jj_3_34()
 {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_declararVariable_85_5_12()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_importarLibreria_81_5_11()) return true;
    return false;
  }

  private boolean jj_3_33()
 {
    if (jj_scan_token(PIZQUIERDO)) return true;
    if (jj_3R_expresion_144_5_17()) return true;
    if (jj_scan_token(PDERECHO)) return true;
    return false;
  }

  private boolean jj_3R_sentencia_67_5_9()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_3R_imprimirSentencia_77_5_10()) return true;
    return false;
  }

  private boolean jj_3_32()
 {
    if (jj_scan_token(CADENA)) return true;
    return false;
  }

  private boolean jj_3_31()
 {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  private boolean jj_3_26()
 {
    if (jj_scan_token(RESTA)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_sentencia_67_5_9()) return true;
    return false;
  }

  private boolean jj_3R_factor_158_5_19()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) {
    jj_scanpos = xsp;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3_28()
 {
    if (jj_scan_token(MULTIPLICACION)) return true;
    return false;
  }

  private boolean jj_3_30()
 {
    if (jj_scan_token(NUMERO)) return true;
    return false;
  }

  private boolean jj_3_27()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) return true;
    }
    if (jj_3R_factor_158_5_19()) return true;
    return false;
  }

  private boolean jj_3R_termino_151_5_18()
 {
    if (jj_3R_factor_158_5_19()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_27()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_25()
 {
    if (jj_scan_token(SUMA)) return true;
    return false;
  }

  private boolean jj_3_24()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    }
    if (jj_3R_termino_151_5_18()) return true;
    return false;
  }

  private boolean jj_3R_expresion_144_5_17()
 {
    if (jj_3R_termino_151_5_18()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_24()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_23()
 {
    if (jj_scan_token(IGUALQUE)) return true;
    return false;
  }

  private boolean jj_3_22()
 {
    if (jj_scan_token(MAYORIGUAL)) return true;
    return false;
  }

  private boolean jj_3_21()
 {
    if (jj_scan_token(MENORIGUAL)) return true;
    return false;
  }

  private boolean jj_3_20()
 {
    if (jj_scan_token(MAYORQUE)) return true;
    return false;
  }

  private boolean jj_3_12()
 {
    if (jj_scan_token(COMA)) return true;
    if (jj_3R_expresion_144_5_17()) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_scan_token(MENORQUE)) return true;
    return false;
  }

  private boolean jj_3R_condicion_132_5_21()
 {
    if (jj_3R_expresion_144_5_17()) return true;
    return false;
  }

  private boolean jj_3_18()
 {
    if (jj_3R_sentencia_67_5_9()) return true;
    return false;
  }

  private boolean jj_3R_whileLoop_125_5_16()
 {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(PIZQUIERDO)) return true;
    if (jj_3R_condicion_132_5_21()) return true;
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_3R_sentencia_67_5_9()) return true;
    return false;
  }

  private boolean jj_3_13()
 {
    if (jj_scan_token(COMA)) return true;
    if (jj_3R_expresion_144_5_17()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3_17()
 {
    if (jj_scan_token(FOR)) return true;
    if (jj_scan_token(PIZQUIERDO)) return true;
    if (jj_3R_declararVariable_85_5_12()) return true;
    return false;
  }

  private boolean jj_3_14()
 {
    if (jj_3R_sentencia_67_5_9()) return true;
    return false;
  }

  private boolean jj_3R_forLoop_105_5_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) return true;
    }
    return false;
  }

  private boolean jj_3_16()
 {
    if (jj_scan_token(FOR)) return true;
    if (jj_scan_token(PIZQUIERDO)) return true;
    if (jj_scan_token(IDENTIFICADOR)) return true;
    return false;
  }

  private boolean jj_3_10()
 {
    if (jj_3R_sentencia_67_5_9()) return true;
    return false;
  }

  private boolean jj_3_9()
 {
    if (jj_3R_sentencia_67_5_9()) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_scan_token(ELSE)) return true;
    if (jj_scan_token(LLAVEIZQ)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_10()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(LLAVEDER)) return true;
    return false;
  }

  private boolean jj_3R_ifStatement_93_5_14()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(PIZQUIERDO)) return true;
    if (jj_3R_condicion_132_5_21()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public MiParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[35];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public MiParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MiParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new MiParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 0; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public MiParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new MiParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new MiParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public MiParser(MiParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(MiParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }
